[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scenes/main_menu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/block-stock/Block Stock.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/textures/earth/unnamed_better.jpg" type="Texture" id=3]
[ext_resource path="res://Assets/audio_files/main_menu.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/textures/skybox/Starscape.png" type="Texture" id=5]
[ext_resource path="res://Assets/textures/pixil-frame-0.png" type="Texture" id=6]
[ext_resource path="res://Assets/textures/pixil-frame-2.png" type="Texture" id=7]
[ext_resource path="res://Assets/textures/pixil-frame-1.png" type="Texture" id=8]

[sub_resource type="Shader" id=1]

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="SphereMesh" id=3]

[sub_resource type="VisualShaderNodeTexture" id=4]
output_port_for_preview = 0
texture = ExtResource( 3 )

[sub_resource type="VisualShader" id=5]
code = "shader_type spatial;
uniform sampler2D tex_frg_2;


void vertex() {
// Output:0

}

void fragment() {
// Texture:2
	vec3 n_out2p0;
	float n_out2p1;
	vec4 tex_frg_2_read = texture( tex_frg_2 , UV.xy );
	n_out2p0 = tex_frg_2_read.rgb;
	n_out2p1 = tex_frg_2_read.a;

// Output:0
	EMISSION = n_out2p0;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( -21, 86 )
nodes/fragment/0/position = Vector2( 380, 140 )
nodes/fragment/2/node = SubResource( 4 )
nodes/fragment/2/position = Vector2( 40, 140 )
nodes/fragment/connections = PoolIntArray( 2, 0, 0, 5 )

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )

[sub_resource type="Animation" id=7]
length = 60.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 30, 60 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 180, 0 ), Vector3( 0, 359, 0 ) ]
}

[sub_resource type="DynamicFont" id=8]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 2 )

[sub_resource type="PanoramaSky" id=11]
panorama = ExtResource( 5 )

[sub_resource type="Environment" id=12]
background_mode = 2
background_sky = SubResource( 11 )
background_energy = 0.3
adjustment_enabled = true
adjustment_contrast = 8.0
adjustment_saturation = 0.01

[node name="main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="background"]
mesh = SubResource( 3 )
material/0 = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="background"]
anims/main_menu_rotation = SubResource( 7 )

[node name="Camera" type="Camera" parent="background"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.25
anchor_right = 0.5
anchor_bottom = 0.25
margin_left = -192.0
margin_right = 192.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.74902, 0.74902, 0.87451, 1 )
custom_colors/font_color_shadow = Color( 0.686275, 0, 1, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Solar Evacuation"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="version" type="Label" parent="Title"]
anchor_left = 0.5
anchor_top = 0.25
anchor_right = 0.5
anchor_bottom = 0.25
margin_left = 192.0
margin_top = 24.75
margin_right = 363.0
margin_bottom = 57.75
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.74902, 0.74902, 0.87451, 1 )
custom_colors/font_color_shadow = Color( 0.686275, 0, 1, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "v 1.0.0  :))"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_handler" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_start" type="Button" parent="btn_handler"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.5
margin_top = -14.0
margin_right = 48.5
margin_bottom = 14.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.74902, 0.74902, 0.87451, 1 )
custom_colors/font_color_hover = Color( 0.686275, 0, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Start"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_upgrade" type="Button" parent="btn_handler"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.5
margin_top = 36.0
margin_right = 65.5
margin_bottom = 64.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.74902, 0.74902, 0.87451, 1 )
custom_colors/font_color_hover = Color( 0.686275, 0, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "upgrade"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_customize" type="Button" parent="btn_handler"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.5
margin_top = 86.0
margin_right = 76.5
margin_bottom = 114.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color_disabled = Color( 0.470588, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
disabled = true
text = "customize"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_options" type="Button" parent="btn_handler"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.5
margin_top = 136.0
margin_right = 65.5
margin_bottom = 164.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color_disabled = Color( 0.470588, 0, 0, 1 )
custom_colors/font_color = Color( 0.74902, 0.74902, 0.87451, 1 )
custom_colors/font_color_hover = Color( 0.686275, 0, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
disabled = true
text = "options"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_exit" type="Button" parent="btn_handler"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.5
margin_top = 186.0
margin_right = 48.5
margin_bottom = 214.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.74902, 0.74902, 0.87451, 1 )
custom_colors/font_color_hover = Color( 0.686275, 0, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "exit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_credits" type="Button" parent="btn_handler"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -149.0
margin_top = -136.0
margin_right = -30.0
margin_bottom = -108.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color_disabled = Color( 0.470588, 0, 0, 1 )
custom_colors/font_color = Color( 0.74902, 0.74902, 0.87451, 1 )
custom_colors/font_color_hover = Color( 0.686275, 0, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
disabled = true
text = "credits"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_log" type="Button" parent="btn_handler"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -149.0
margin_top = -86.0
margin_right = -86.0
margin_bottom = -58.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color_disabled = Color( 0.470588, 0, 0, 1 )
custom_colors/font_color = Color( 0.74902, 0.74902, 0.87451, 1 )
custom_colors/font_color_hover = Color( 0.686275, 0, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
disabled = true
text = "log"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="upgrade_panel" type="Control" parent="."]
visible = false
anchor_bottom = 1.0
margin_right = 320.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="speed" type="TextureButton" parent="upgrade_panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )

[node name="Label" type="Label" parent="upgrade_panel/speed"]
margin_left = 7.49612
margin_top = 64.0
margin_right = 92.4961
margin_bottom = 86.0
custom_fonts/font = SubResource( 10 )
text = "speed: 20$$$"

[node name="accel" type="TextureButton" parent="upgrade_panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = 64.0
margin_right = 50.0
margin_bottom = 164.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )

[node name="Label2" type="Label" parent="upgrade_panel/accel"]
margin_left = 7.49612
margin_top = 62.1982
margin_right = 92.4961
margin_bottom = 84.1982
custom_fonts/font = SubResource( 10 )
text = "accel: 60$$$"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fuel" type="TextureButton" parent="upgrade_panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = 186.0
margin_right = 50.0
margin_bottom = 286.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )

[node name="Label3" type="Label" parent="upgrade_panel/fuel"]
margin_left = 7.49612
margin_top = 56.0
margin_right = 92.4961
margin_bottom = 78.0
custom_fonts/font = SubResource( 10 )
text = "fuel:   10$$$"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="upgrade_panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.5
margin_top = -117.0
margin_right = 76.5
margin_bottom = -89.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.74902, 0.74902, 0.87451, 1 )
custom_colors/font_color_hover = Color( 0.686275, 0, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "close"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="customize_panel" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="options_panel" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 12 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
[connection signal="pressed" from="btn_handler/btn_start" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="btn_handler/btn_upgrade" to="." method="_on_btn_upgrade_pressed"]
[connection signal="pressed" from="btn_handler/btn_exit" to="." method="_on_btn_exit_pressed"]
[connection signal="pressed" from="upgrade_panel/back" to="." method="_on_back_pressed"]
